--- a/Changes
+++ b/Changes
@@ -1,6 +1,16 @@
-Revision history for Perl module RPi::GPIO
+commit cca5d48c6198985908f7d67d92d40cb0412dec5b (v0.01)
+Date:   Mon Jun 18 15:51:27 2012 +0100
 
-0.01 Sat Jun 16 22:37:03 2012
-    - original version;
+    * Lots of code improvements and changes
+    + Added checks to filehandle opens
+    + Added PATH parameter
+    + Added remove()
 
+ 3 files changed, 177 insertions(+), 81 deletions(-)
 
+commit dbe977bd07f9ff11e0e8b62da4d95152ad1cd5fc
+Date:   Sun Jun 17 15:29:12 2012 +0100
+
+    Initial Commit
+
+ 9 files changed, 803 insertions(+)
